added product specification section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Rcland | Home of Affordable Computers &amp; Accessories</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/28de576615.js"></script>
     <link rel="stylesheet" href="./css/simplelightbox.min.css">
@@ -16,6 +16,55 @@
 </head>
 
 <body>
+    <header id="header">
+        <nav class="container" id="navbar">
+            <h1><img src="./images/logo.png" alt="Racoon Devs company logo" id="header-img"></h1>
+            <ul class="nav-items">
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#gallery" class="nav-link">Gallery</a></li>
+                <li><a href="#contact" class="nav-link button button-secondary btn-small">Get in touch</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="showcase">
+        <div class="container">
+            <div>
+                <h2>The Brand New Asus Rog GL551</h2>
+                <p>Experience real gaming experience with highly dedicated Nvidia graphics and optimized RAM without any
+                    breakages and lagging. Asus Rog 23XRG redefines the experience for gaming</p>
+                <a href="#" class="button button-highlight btn-large">Order Now</a>
+            </div>
+            <img src="./images/asus-rog.png" alt="Asus Rog Gaming Machine">
+        </div>
+    </section>
+
+    <section class="specifications">
+        <div class="overlay">
+            <div class="spec-inner">
+                <h3>Product Specifications</h3>
+                <ul class="spec-list">
+                    <li><strong>CPU</strong> 2.5GHz Intel Core i7-4710HQ</li>
+                    <li><strong>Graphics</strong> Nvidia GeForce GTX 860M (2GB GDDR5 RAM); Intel HD Graphics 4600</li>
+                    <li><strong>RAM</strong> 16GB DDR3L (2x 8GB at 1600MHz)</li>
+                    <li><strong>Screen</strong> 15.6" FHD (1920 x 1080) display, matte finish</li>
+                    <li><strong>Storage</strong> 1TB HDD (7,200 rpm)</li>
+                    <li><strong>Optical drive</strong> 8x DL DVD±RW/CD-RW Drive</li>
+                    <li><strong>Ports</strong> 3 x USB 3.0, 1 x HDMI, 1x mini DisplayPort. SDXC card reader, Gigabit
+                        Ethernet</li>
+                    <li><strong>Connectivity</strong> 802.11 a/b/g/n, Bluetooth 4.0</li>
+                    <li><strong>Camera</strong> 1.2MP, 720p webcam</li>
+                    <li><strong>Weight</strong> 6 pounds</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/simple-lightbox.min.js"></script>
