completed the gallery section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,43 @@
         </div>
     </section>
 
+    <section class="product-gallery">
+        <div class="gallery" id="gallery">
+            <a href="./images/image1.jpg">
+                <img src="./images/image1.jpg" alt="dark asus wallpaper" class="big">
+            </a>
+            <a href="./images/image2.jpg">
+                <img src="./images/image2.jpg" alt="sleek desktop wallpaper" class="big">
+            </a>
+            <a href="./images/image3.jpg">
+                <img src="./images/image3.jpg" alt="bright asus wallpaper" class="big">
+            </a>
+            <a href="./images/image4.jpg">
+                <img src="./images/image4.jpg" alt="red asus wallpaper" class="big">
+            </a>
+            <a href="./images/image5.jpg">
+                <img src="./images/image5.jpg" alt="better bright-red photo of asus" class="big">
+            </a>
+            <a href="./images/image6.jpg">
+                <img src="./images/image6.jpg" alt="darkmix asus wallpaper" class="big">
+            </a>
+            <a href="./images/image7.jpg">
+                <img src="./images/image7.jpg" alt="neat asus wallpaper" class="big">
+            </a>
+            <a href="./images/image8.jpg">
+                <img src="./images/image8.jpg" alt="great desktop background" class="big">
+            </a>
+            <a href="./images/image9.jpg">
+                <img src="./images/image9.jpg" alt="beaming lightred wallpaper" class="big">
+            </a>
+            <a href="./images/image10.jpg">
+                <img src="./images/image10.jpg" alt="crimson background for asus wallpaper" class="big">
+            </a>
+            <a href="./images/image11.jpg">
+                <img src="./images/image11.jpg" alt="dark desktop wallpaper" class="big">
+            </a>
+        </div>
+    </section>
 
 
 
