created parallax effect for bg

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <h1><img src="./images/logo.png" alt="Racoon Devs company logo" id="header-img"></h1>
             <ul class="nav-items">
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#specifications" class="nav-link">Features</a></li>
                 <li><a href="#gallery" class="nav-link">Gallery</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#contact" class="nav-link button button-secondary btn-small">Get in touch</a></li>
             </ul>
         </nav>
@@ -40,7 +41,7 @@
         </div>
     </section>
 
-    <section class="specifications">
+    <section class="specifications" id="specifications">
         <div class="overlay">
             <div class="spec-inner">
                 <h3>Product Specifications</h3>
