added review section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#specifications" class="nav-link">Features</a></li>
                 <li><a href="#gallery" class="nav-link">Gallery</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#review" class="nav-link">Review</a></li>
                 <li><a href="#contact" class="nav-link button button-secondary btn-small">Get in touch</a></li>
             </ul>
         </nav>
@@ -34,7 +34,7 @@
             <div>
                 <h2>The Brand New Asus Rog GL551</h2>
                 <p>Experience real gaming experience with highly dedicated Nvidia graphics and optimized RAM without any
-                    breakages and lagging. Asus Rog 23XRG redefines the experience for gaming</p>
+                    breakages and lagging. Asus Rog GL551 redefines the experience for gaming</p>
                 <a href="#" class="button button-highlight btn-large">Order Now</a>
             </div>
             <img src="./images/asus-rog.png" alt="Asus Rog Gaming Machine">
@@ -101,11 +101,27 @@
     </section>
 
 
+    <section class="review" id="review">
+        <h3>Product Review</h3>
+        <div class="container">
+            <div class="review-items">
+                <img src="./images/review.svg" alt="product review image">
+            </div>
+            <div class="product-video" id="video">
+                <iframe src="https://player.vimeo.com/video/162040532" width="640" height="270" frameborder="0"
+                    allow="autoplay; fullscreen" allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </section>
+
+
 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/simple-lightbox.min.js"></script>
+    <script src="./js/jquery.fitvids.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
