--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header id="header">
         <nav class="container" id="navbar">
-            <h1><img src="./images/logo.png" alt="Racoon Devs company logo" id="header-img"></h1>
+            <h1><img src="./images/logo1.png" alt="Racoon Devs company logo" id="header-img"></h1>
             <ul class="nav-items">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#specifications" class="nav-link">Features</a></li>
@@ -115,7 +115,26 @@
         </div>
     </section>
 
-
+    <section class="specifications" id="specifications">
+        <div class="overlay">
+            <div class="spec-inner">
+                <h3>Product Specifications</h3>
+                <ul class="spec-list">
+                    <li><strong>CPU</strong> 2.5GHz Intel Core i7-4710HQ</li>
+                    <li><strong>Graphics</strong> Nvidia GeForce GTX 860M (2GB GDDR5 RAM); Intel HD Graphics 4600</li>
+                    <li><strong>RAM</strong> 16GB DDR3L (2x 8GB at 1600MHz)</li>
+                    <li><strong>Screen</strong> 15.6" FHD (1920 x 1080) display, matte finish</li>
+                    <li><strong>Storage</strong> 1TB HDD (7,200 rpm)</li>
+                    <li><strong>Optical drive</strong> 8x DL DVD±RW/CD-RW Drive</li>
+                    <li><strong>Ports</strong> 3 x USB 3.0, 1 x HDMI, 1x mini DisplayPort. SDXC card reader, Gigabit
+                        Ethernet</li>
+                    <li><strong>Connectivity</strong> 802.11 a/b/g/n, Bluetooth 4.0</li>
+                    <li><strong>Camera</strong> 1.2MP, 720p webcam</li>
+                    <li><strong>Weight</strong> 6 pounds</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
 
 
