completed media queries for all screen sizes

--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
         <div class="container">
             <div>
                 <h2 id="home">The Brand New Asus Rog GL551</h2>
-                <p>Experience real gaming experience with highly dedicated Nvidia graphics and optimized RAM without any
+                <p>Experience real gaming experience with highly dedicated Nvidia graphics and optimized RAM without
+                    any
                     breakages and lagging. Asus Rog GL551 redefines the experience for gaming</p>
                 <a href="#" class="button button-highlight btn-large">Order Now</a>
             </div>
-            <img src="./images/asus-rog.png" alt="Asus Rog Gaming Machine">
+            <div>
+                <img src="./images/asus-rog.png" alt="Asus Rog Gaming Machine">
+            </div>
         </div>
     </section>
 
@@ -47,7 +50,8 @@
                 <h3>Product Specifications</h3>
                 <ul class="spec-list">
                     <li><strong>CPU</strong> 2.5GHz Intel Core i7-4710HQ</li>
-                    <li><strong>Graphics</strong> Nvidia GeForce GTX 860M (2GB GDDR5 RAM); Intel HD Graphics 4600</li>
+                    <li><strong>Graphics</strong> Nvidia GeForce GTX 860M (2GB GDDR5 RAM); Intel HD Graphics 4600
+                    </li>
                     <li><strong>RAM</strong> 16GB DDR3L (2x 8GB at 1600MHz)</li>
                     <li><strong>Screen</strong> 15.6" FHD (1920 x 1080) display, matte finish</li>
                     <li><strong>Storage</strong> 1TB HDD (7,200 rpm)</li>
@@ -170,7 +174,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/simple-lightbox.min.js"></script>
