added scroll behaviour property

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#specifications" class="nav-link">Features</a></li>
                 <li><a href="#gallery" class="nav-link">Gallery</a></li>
-                <li><a href="#review" class="nav-link" id="review">Review</a></li>
+                <li><a href="#review" class="nav-link">Review</a></li>
                 <li><a href="#contact" class="nav-link button button-secondary btn-small">Contact</a></li>
             </ul>
         </nav>
