--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
     <header id="header">
         <nav class="container" id="navbar">
-            <h1><img src="./images/logo1.png" alt="Racoon Devs company logo" id="header-img"></h1>
+            <h1>
+                <a href="index.html"><img src="./images/logo1.png" alt="Racoon Devs company logo" id="header-img"></a>
+            </h1>
             <ul class="nav-items">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#specifications" class="nav-link">Features</a></li>
