added email action link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div>
                 <h3 id="contact">Subscribe</h3>
                 <p>Enter your email and stay-up-to-date with our newsletter</p>
-                <form name="email-form" method="post" id="form">
+                <form name="email-form" method="post" action="https://www.freecodecamp.com/email-submit" id="form">
                     <div class="email-form">
                         <span class="form-control-wrap">
                             <input type="email" name="email" id="email" class="form-control" size="40"
