removed fitvid.js and added custom css for video responsiveness

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header id="header">
-        <nav class="container" id="navbar">
+        <nav class="container" id="nav-bar">
             <h1>
                 <a href="index.html"><img src="./images/logo1.png" alt="Racoon Devs company logo" id="header-img"></a>
             </h1>
@@ -114,9 +114,9 @@
             <div class="review-items" data-aos="zoom-out">
                 <img src="./images/review.svg" alt="product review image">
             </div>
-            <div class="product-video" id="video" data-aos="zoom-out-right">
-                <iframe src="https://player.vimeo.com/video/162040532" width="640" height="270" frameborder="0"
-                    allow="autoplay; fullscreen" allowfullscreen>
+            <div class="product-video video-responsive" data-aos="zoom-out-right">
+                <iframe src="https://player.vimeo.com/video/162040532" id="video" width="640" height="270"
+                    frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
                 </iframe>
             </div>
         </div>
@@ -177,11 +177,10 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/simple-lightbox.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/jquery.fitvids.js"></script>
     <script src="./js/jump.js"></script>
     <script src="./js/script.js"></script>
 </body>
