entire project completed and passed validation

--- a/index.html
+++ b/index.html
@@ -162,16 +162,11 @@
             </div>
             <div>
                 <h3 id="contact">Subscribe</h3>
-                <p>Enter your email and stay-up-to-date with our newsletter</p>
+                <p>Enter your email to signup for our newsletter</p>
                 <form name="email-form" method="post" action="https://www.freecodecamp.com/email-submit" id="form">
                     <div class="email-form">
-                        <span class="form-control-wrap">
-                            <input type="email" name="email" id="email" class="form-control" size="40"
-                                placeholder="Subscribe to our newsletter">
-                            <button type="sunmit" class="form-control submit" id="submit">
-                                <i class="fas fa-arrow-circle-right"></i>
-                            </button>
-                        </span>
+                        <input type="email" id="email" name="email" placeholder="Subscribe to our newsletter" required>
+                        <input type="submit" id="submit" value="Subscribe">
                     </div>
                 </form>
             </div>
@@ -181,7 +176,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/simple-lightbox.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/jump.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
