fixed html validation errors

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     </section>
 
     <section class="product-gallery">
+        <h3>Asus Wallpapers</h3>
         <div class="gallery" id="gallery">
             <a href="./images/image1.jpg" data-aos="fade-up">
                 <img src="./images/image1.jpg" alt="dark asus wallpaper" class="big">
@@ -116,7 +117,7 @@
             </div>
             <div class="product-video video-responsive" data-aos="zoom-out-right">
                 <iframe src="https://player.vimeo.com/video/162040532" id="video" width="640" height="270"
-                    frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
+                    allow="autoplay; fullscreen" allowfullscreen>
                 </iframe>
             </div>
         </div>
