added github link and twitter url

--- a/index.html
+++ b/index.html
@@ -123,12 +123,14 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="section-footer">
         <div class="container">
             <div>
                 <h3>Social Networks</h3>
-                <a href="#">
+                <a href="https://github.com/danielkpodo/rcland" title="Visit pjoject repository">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+                <a href="https://twitter.com/NarhKpodo" title="Follow me on twitter">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
                 <a href="#">
@@ -136,9 +138,6 @@
                 </a>
                 <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-youtube fa-2x"></i>
                 </a>
             </div>
 
