enable social link opens in new tab

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         <div class="container">
             <div>
                 <h3>Social Networks</h3>
-                <a href="https://github.com/danielkpodo/rcland" title="Visit pjoject repository">
+                <a href="https://github.com/danielkpodo/rcland" title="Visit pjoject repository" target="_blank">
                     <i class="fab fa-github fa-2x"></i>
                 </a>
-                <a href="https://twitter.com/NarhKpodo" title="Follow me on twitter">
+                <a href="https://twitter.com/NarhKpodo" title="Follow me on twitter" target="_blank">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
                 <a href="#">
